frontend code smell fixes
